[gd_scene load_steps=24 format=3 uid="uid://ca7f6t5iympxb"]

[ext_resource type="Script" path="res://Soldier.gd" id="1_n718e"]
[ext_resource type="Texture2D" uid="uid://ba8a1svuc2xx2" path="res://Pedjuang Nusantara Assets/Soldier_2/Idle.png" id="1_nxcow"]
[ext_resource type="Texture2D" uid="uid://bnlykudxln5tu" path="res://Pedjuang Nusantara Assets/Soldier_2/Shot_1.png" id="2_pogi5"]
[ext_resource type="Texture2D" uid="uid://ck7pb82no3g05" path="res://Pedjuang Nusantara Assets/Soldier_2/Run.png" id="3_ev4wi"]
[ext_resource type="Texture2D" uid="uid://cnudqnoguc4q0" path="res://Pedjuang Nusantara Assets/Soldier_2/Dead.png" id="4_uvjca"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5j3i4"]
size = Vector2(26, 32)

[sub_resource type="Animation" id="Animation_wtdxt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SoldierSprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_nxcow")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SoldierSprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SoldierSprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SoldierSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lwngs"]
resource_name = "attack"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SoldierSprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_pogi5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SoldierSprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SoldierSprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SoldierSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_yh3bo"]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SoldierSprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_uvjca")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SoldierSprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SoldierSprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SoldierSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_30giw"]
resource_name = "idle"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SoldierSprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_nxcow")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SoldierSprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SoldierSprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SoldierSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_21jnm"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SoldierSprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ev4wi")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SoldierSprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SoldierSprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SoldierSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5nlpf"]
_data = {
"RESET": SubResource("Animation_wtdxt"),
"attack": SubResource("Animation_lwngs"),
"death": SubResource("Animation_yh3bo"),
"idle": SubResource("Animation_30giw"),
"run": SubResource("Animation_21jnm")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1ovgm"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nbjt2"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c8r2b"]
animation = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b3s8j"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1f5or"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jw2lv"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_08rpj"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ot627"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p0caa"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_cpxch"]
states/End/position = Vector2(906, 137)
states/Start/position = Vector2(160, 137)
states/attack/node = SubResource("AnimationNodeAnimation_1ovgm")
states/attack/position = Vector2(558, 64)
states/death/node = SubResource("AnimationNodeAnimation_nbjt2")
states/death/position = Vector2(715, 137)
states/idle/node = SubResource("AnimationNodeAnimation_c8r2b")
states/idle/position = Vector2(341, 142)
transitions = ["idle", "attack", SubResource("AnimationNodeStateMachineTransition_b3s8j"), "attack", "death", SubResource("AnimationNodeStateMachineTransition_1f5or"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_jw2lv"), "idle", "death", SubResource("AnimationNodeStateMachineTransition_08rpj"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_ot627"), "death", "End", SubResource("AnimationNodeStateMachineTransition_p0caa")]
graph_offset = Vector2(12, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_loxw8"]
size = Vector2(58.5, 56)

[node name="Enemy" type="Node2D"]

[node name="Soldier" type="CharacterBody2D" parent="."]
script = ExtResource("1_n718e")

[node name="SoldierSprite2D" type="Sprite2D" parent="Soldier"]
position = Vector2(-28.5, 36.5)
scale = Vector2(0.554688, 0.429688)
texture = ExtResource("1_nxcow")
flip_h = true
hframes = 9

[node name="SoldierShape2D" type="CollisionShape2D" parent="Soldier"]
position = Vector2(-30, 48)
shape = SubResource("RectangleShape2D_5j3i4")

[node name="AnimationSoldier" type="AnimationPlayer" parent="Soldier"]
libraries = {
"": SubResource("AnimationLibrary_5nlpf")
}

[node name="AnimationTree" type="AnimationTree" parent="Soldier"]
tree_root = SubResource("AnimationNodeStateMachine_cpxch")
anim_player = NodePath("../AnimationSoldier")
active = true

[node name="VisionAreaSoldier" type="Area2D" parent="Soldier"]

[node name="CollisionVision2D" type="CollisionShape2D" parent="Soldier/VisionAreaSoldier"]
position = Vector2(-73, 36)
shape = SubResource("RectangleShape2D_loxw8")

[connection signal="body_entered" from="Soldier/VisionAreaSoldier" to="Soldier" method="_on_vision_area_soldier_body_entered"]
